[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archerdfu.fonts"
version = "0.1.0b0"
description = "Module to operate and modify archer reticle2 files"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ARCHER", "archerdfu", "pydfuutil", 'dfuutil']
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pillow>=11.1.0",
]


[project.urls]
"Homepage" = "https://github.com/archerdfu/archerdfu.fonts"
"Bug Reports" = "https://github.com/archerdfu/archerdfu.fonts/issues"
"Source" = "https://github.com/archerdfu/archerdfu.fonts"

[tool.setuptools]
py-modules = ["archerdfu.fonts"]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["archerdfu*"]
exclude = ["assets*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "setuptools>=76.0.0",
    "wheel>=0.45.1",
]